--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 .box{
     width: 100%;
     height: 100vh;
-    background: rgba(0,0,0,0.6) url(/fon.jpg) center no-repeat;
+    background: rgba(0,0,0,0.6) url(fon.jpg) center no-repeat;
     background-size: cover;
     background-blend-mode: multiply;
     display: flex;
