--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 .box{
     width: 100%;
     height: 100vh;
-    background: rgba(0,0,0,0.6) url(fon.jpg) center no-repeat;
+    background: rgba(0,0,0,0.6) url(https://celes.club/uploads/posts/2022-05/1653287542_4-celes-club-p-ukrainskii-fon-dlya-prezentatsii-krasivie-4.jpg) center no-repeat;
     background-size: cover;
     background-blend-mode: multiply;
     display: flex;
